# syncar

./: .env.example  .env.example.new  .env.prod  .env.produccion  .env.production.example  .gitignore  .gitignore.new  CHECKLIST_DEPLOY.md  DEPLOY_AHORA.md  DEPLOY_EXITOSO_18OCT.md  DEPLOY_INSTRUCTIONS.md  DEPLOY_MEJORADO.md  DEPLOY_PRODUCCION.md  DEPLOY_RAPIDO.md  DEPLOY_SEGURO.md  FIX_TOKEN_401.md  Makefile  PROTEGER_DATOS_BD.md  QUICK_START.md  README.md  check-dns.sh  deploy-complete.sh  deploy-now.sh  deploy_syncar.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  enable-ssl.sh  fix-nginx.sh  nginx-config-fix.conf  restart-nginx.sh  setup-dns-server.sh  setup-ssl.sh  syncar-site-config.conf  test_config_endpoints.sh  validate_config.py  verify-dns.sh
backend/: Dockerfile  SCRAPING_NORIEGA_ACTUALIZADO.md  SCRAPING_PRODUCTOS_DETALLE.md  alembic.ini  check_products.py  list_importer_configs.py  pyproject.toml  requirements.txt  test_noriega_playwright.py  uvicorn_config.py
backend/alembic/: env.py
backend/alembic/versions/: 2025_10_15_2206-6739f918fc74_initial_schema.py  2025_10_15_2220-a4e1a42328f3_add_credentials_and_is_active_to_.py  2025_10_16_1708-37c6edc65f51_add_selected_to_categories.py  2025_10_16_1955-27d158d66668_make_products_per_category_nullable.py  2025_10_18_1926-e6509d63813f_add_roles_and_permissions.py  208b3d5c51bf_add_categories_table.py  7365629bd845_create_initial_tables_for_products_and_.py  (+1 more)
backend/app/: main.py  test_noriega_categories.py
backend/scripts/: dev_noriega_scraper.py  init_data.sql  inspect_product_page.py
(+147 files in other folders)
